# DiscordSpice

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml
assets/: default_config.toml
src/: lib.rs
src/discord/: mod.rs
src/minecraft/: mod.rs
